Fixed register, Fixed booking modal on mobile

--- a/src/components/BookingModal/bookingmodal.scss
+++ b/src/components/BookingModal/bookingmodal.scss
@@ -172,6 +172,28 @@
   }
 }
 @media only screen and (max-device-width: 768px) {
+  .mobile-booking-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    h1 {
+      margin: 0;
+      box-sizing: border-box;
+    }
+    margin-top: 5px;
+    margin-bottom: 20px;
+    svg {
+      margin-top: 5px;
+      transition: 0.1s;
+      &:focus,
+      &:active,
+      &:hover {
+        fill: #ebebeb;
+        transition: 0.1s;
+      }
+    }
+  }
   .booking-modal {
     h1 {
       box-sizing: border-box;
